<resources>
    <string name="app_name">mp3yt</string>
    <string name="search">Wyszukiwanie</string>
    <string name="download">Pobrane</string>
    <string name="settings">Ustawienia</string>
    <string name="menu">Menu aplikacji</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_input_string">Wyszukaj w YouTube...</string>
    <string name="search_button_string">Szukaj</string>
    <string name="search_results">Wyniki wyszukiwania</string>
    <string name="no_results">Brak wyników</string>
    <string name="play_audio_data">Play audio data</string>
    <string name="download_audio_data">Download audio data</string>
    <string name="video_image">Video image</string>
</resources>
