<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SearchFragment">

    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_alignParentStart="true"
              android:layout_toStartOf="@+id/search_button"
              android:id="@+id/search_input"
              android:hint="@string/search_input_string"
    />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/search_button"
            android:text="@string/search_button_string"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_input"
            android:layout_marginTop="20dp"
            android:id="@+id/search_results"
            android:text="@string/search_results"/>

    <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/search_view"
            android:layout_below="@+id/search_results"
            android:queryHint="@string/search_input_string"
            android:gravity="center" android:visibility="visible"/>

</RelativeLayout>