<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="7.5dp"
                tools:context=".SearchResultFragment">
    <ImageView android:layout_width="60dp"
               android:layout_height="45dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentTop="true"
               android:id="@+id/downloaded_item_image"
               tools:srcCompat="@tools:sample/avatars[3]"
               android:contentDescription="@string/video_image"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_toStartOf="@id/downloaded_play_button"
              android:layout_toEndOf="@+id/downloaded_item_image"
              android:layout_marginEnd="20dp"
              android:layout_marginStart="20dp"
              android:text="audio name"
              android:id="@+id/downloaded_item_name"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toEndOf="@+id/downloaded_item_image"
              android:layout_alignParentBottom="true"
              android:layout_toStartOf="@id/downloaded_play_button"
              android:layout_marginEnd="20dp"
              android:layout_marginStart="20dp"
              android:text="date"
              android:id="@+id/downloaded_item_id"
    />
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_delete"
            android:id="@+id/downloaded_button"
            android:contentDescription="@string/download_audio_data"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:background="@android:color/transparent"/>
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toStartOf="@+id/downloaded_button"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@android:drawable/ic_media_play"
            android:id="@+id/downloaded_play_button"
            android:contentDescription="@string/play_audio_data"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:background="@android:color/transparent"/>

</RelativeLayout>